[tool.poetry]
name = "sonounolib"
version = "0.4.1"
description = "Library of generic sonification components."
authors = ["Pierre Chanial <pierre.chanial@apc.in2p3.fr>", "Johanna Casado <johi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
sounddevice = "^0.4.4"
streamunolib = "^0.4.3"

[tool.poetry.dev-dependencies]
mkdocs = "^1.2.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
ipython = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "except ImportError:",
]
omit = [
    "sonounolib/extern/*"
]
show_missing = true
skip_covered = true

[tool.isort]
known_first_party = ["streamunolib"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = [
    "IPython",
    "IPython.display",
    "sounddevice",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "sonounolib.extern.*",
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=sonounolib"
testpaths = [
    "tests",
]
